--- a/BiGAN implementation.ipynb
+++ b/BiGAN implementation.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,16 +59,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x10617acf8>"
+       "<matplotlib.image.AxesImage at 0x1048b5518>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,15 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "doog\n"
+     ]
+    }
+   ],
    "source": [
     "if cuda_available:\n",
     "    generator = Generator(latent_size= latent_size).cuda()\n",
@@ -159,7 +167,16 @@
     "    discriminator = Discriminator(latent_size= latent_size,\n",
     "                              dropout= drouput_p, \n",
     "                              output_size= 1)\n",
-    "    encoder = Encoder(latent_size= latent_size)"
+    "    encoder = Encoder(latent_size= latent_size)\n",
+    "\n",
+    "if os.path.exists(\"discriminator_model.pth\"):\n",
+    "    genload = torch.load('generator_model.pth')\n",
+    "    discrimload = torch.load('discriminator_model.pth')\n",
+    "    encodload = torch.load(\"encoder_model.pth\")\n",
+    "    \n",
+    "    generator.load_state_dict(genload['state_dict'])\n",
+    "    discriminator.load_state_dict(discrimload['state_dict'])\n",
+    "    encoder.load_state_dict(encodload['state_dict'])"
    ]
   },
   {
@@ -331,12 +348,12 @@
     "            loss_pq.backward()\n",
     "            optimizer_pq.step()\n",
     "    \n",
-    "    path = \"generator_model\"\n",
-    "    torch.save(generator, path)\n",
-    "    path = \"encoder_model\"\n",
-    "    torch.save(encoder, path)\n",
-    "    path = \"discriminator_model\"\n",
-    "    torch.save(discriminator, path)\n",
+    "    path = \"generator_model.pth\"\n",
+    "    torch.save(generator.state_dict(), path)\n",
+    "    path = \"encoder_model.pth\"\n",
+    "    torch.save(encoder.state_dict(), path)\n",
+    "    path = \"discriminator_model.pth\"\n",
+    "    torch.save(discriminator.state_dict(), path)\n",
     "    \n",
     "    plt.imshow(generated_image)\n",
     "        \n",
